# effort-sharing

./: .gitignore  Aggregator.ipynb  CITATION.cff  CO2_analysis_CW.ipynb  CODE_OF_CONDUCT.md  ClassEffortSharing.py  Comparison.ipynb  DataChecks.ipynb  DataExports.ipynb  Functions.py  LULUCF_investigation.ipynb  Main.ipynb  PostProcessing.ipynb  README.md  apidocs.md  class_allocation.py  class_allocation_CO2.py  class_allocation_combinedapproaches.py  class_datareading.py  class_policyscens.py  class_tempalign.py  class_variancedecomp.py  conda-lock.yml  config.default.yml  environment.yml  example.py  input.yml  policyscen_test_nb_CW.ipynb  profiling.py  profiling_results.prof  pyproject.toml  requirements.txt  requirements_pip.txt  test_notebook_chantal.ipynb
.dvc/: config
DataExporters/: PBL_report_replication.ipynb  class_exports.py  export_execution.ipynb
EffortSharing_Netherlands/: Calculations.ipynb
Old/: ClassEffortSharing_backup.py  class_allocation.py
Plotting/: Europe_Memberstates.ipynb  Europe_Memberstates_ind.ipynb  Figure_Circles.ipynb  Figure_Costoptimal.ipynb  Figure_NDC.ipynb  Figure_NDC_Yann.ipynb  Figure_NDC_Yann_PC.ipynb  Figure_Netzero.ipynb  Figure_Yann_Fig1.ipynb  Figure_globalassess.ipynb  Figure_talign_europe.ipynb  Figure_tempalignment.ipynb  Figure_transition_fluvial.ipynb  Global_Budgets.ipynb  Global_Pathways.ipynb  Global_explorations.ipynb  Nederland.ipynb  Regional_2030_allocations.ipynb  Regional_Budgets_Allocations.ipynb  Regional_Pathways.ipynb
PostProcessing/: Computations_NLD.ipynb
notebooks/: Aggregator.ipynb  Main.ipynb  (+2 more)
(+169 files in other folders)
